Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-49478

winrt: HttpResponse without network connection

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • None
    • 5.6.0 Beta
    • Network: HTTP
    • Windows 8.1 x64
      MSVC 2013
      Nokia Lumia 920
    • WinRT
    • fecbe76d6e24c4025cf8efb012571d1535a938ff and c63dbf8419cd40fd21422ccc73e231677f24b95c in qtbase/5.6

      HttpResponse is not returned every time when network connection is unavailable.

      Steps to reproduce:

      1.) Switch your device to airplane mode
      2.) Send some http get-requests to webservice.

      Expected result:

      • Http Response is returned for every request

      Actual:

      • Http Response is not returned for many requests

      Attached test application which sends 100 Get requests to a server and prints responses to output.

        1. NetworkTestBench.7z
          2 kB
          Matti Malinen
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            owolff Oliver Wolff
            matti.malinen@digia.com Matti Malinen
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes