winrt: no assert when device is in airplane mode/has no internet connection

Task-number: QTBUG-49478
Change-Id: I1b95ca736d454f82f84374554e6cdec2555d29de
Reviewed-by: Andrew Knight <andrew.knight@intopalo.com>